Switch to using Flossie Aligned Data

--- a/ParseData.ipynb
+++ b/ParseData.ipynb
@@ -34,7 +34,7 @@
     "import numpy as np\n",
     "import os\n",
     "\n",
-    "from util import h5_to_dict, dict_to_h5"
+    "from cepnem_jax import h5_to_dict, dict_to_h5"
    ]
   },
   {
@@ -231,14 +231,12 @@
     "    turns = []\n",
     "    \n",
     "    for reversal in data[ds]['reversal_events']:\n",
-    "        if(reversal[1] - reversal[0] >= min_reversal_len and reversal[0] - offset - time_range >= 0 and reversal[1]+2 < len(data[ds]['head_angle'])):\n",
-    "            shift = jax.random.randint(key, (1,), 0, min(max_shift, reversal[1] - reversal[0] - min_reversal_len))[0]\n",
-    "            if(reversal[0] - offset - shift - time_range < 0):\n",
-    "                shift = 0\n",
-    "            reversal_starts.append(reversal[0] - offset - shift)\n",
-    "            reversal_ends.append(reversal[1] - offset - shift)\n",
-    "            \n",
+    "        if(reversal[1] - reversal[0] >= min_reversal_len and reversal[1]+2 < len(data[ds]['head_angle'])):        \n",
     "            post_reversal_turn = \"D\" if np.mean([data[ds]['head_angle'][reversal[1]+1], data[ds]['head_angle'][reversal[1]+2]]) > 0 else \"V\" # Determine the turn after the reversal\n",
+    "            reversal_starts.append(reversal[0] - offset + time_range)\n",
+    "            reversal_ends.append(reversal[1] - offset)\n",
+    "            \n",
+    "            \n",
     "            turns.append(post_reversal_turn)\n",
     "        \n",
     "    data[ds]['reversal_starts'] = reversal_starts\n",
@@ -261,19 +259,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Class: CEPV Turns:  750 (D:  170, V:  580)\n",
-      "Class: IL1V Turns:  625 (D:  131, V:  494)\n",
-      "Class: IL2V Turns:  781 (D:  171, V:  610)\n",
-      "Class: OLQV Turns:  766 (D:  163, V:  603)\n",
-      "Class: RMDV Turns:  733 (D:  164, V:  569)\n",
-      "Class: RMEV Turns:  528 (D:  120, V:  408)\n",
-      "Class: SAAV Turns:  595 (D:  123, V:  472)\n",
-      "Class: SIAV Turns:  273 (D:   43, V:  230)\n",
-      "Class: SIBV Turns:  258 (D:   41, V:  217)\n",
-      "Class: SMBV Turns:  298 (D:   50, V:  248)\n",
-      "Class: SMDV Turns:  787 (D:  174, V:  613)\n",
-      "Class: URAV Turns:  435 (D:   95, V:  340)\n",
-      "Class: URYV Turns:  783 (D:  164, V:  619)\n"
+      "Class: CEPV Turns:  760 (D:  172, V:  588)\n",
+      "Class: IL1V Turns:  632 (D:  132, V:  500)\n",
+      "Class: IL2V Turns:  791 (D:  173, V:  618)\n",
+      "Class: OLQV Turns:  775 (D:  165, V:  610)\n",
+      "Class: RMDV Turns:  743 (D:  166, V:  577)\n",
+      "Class: RMEV Turns:  536 (D:  121, V:  415)\n",
+      "Class: SAAV Turns:  604 (D:  125, V:  479)\n",
+      "Class: SIAV Turns:  277 (D:   44, V:  233)\n",
+      "Class: SIBV Turns:  263 (D:   42, V:  221)\n",
+      "Class: SMBV Turns:  302 (D:   51, V:  251)\n",
+      "Class: SMDV Turns:  797 (D:  176, V:  621)\n",
+      "Class: URAV Turns:  439 (D:   95, V:  344)\n",
+      "Class: URYV Turns:  792 (D:  165, V:  627)\n"
      ]
     }
    ],
