Successful Decoding with Flossie Aligned end of reversal

--- a/ParseData.ipynb
+++ b/ParseData.ipynb
@@ -96,11 +96,11 @@
    "source": [
     "# PRJ_KFC\n",
     "\n",
-    "prj_data[\"prj_kfc\"] = {\n",
-    "    \"processed_h5_directory\": \"/store1/prj_kfc/data/processed_h5\", # Directory containing the processed h5 files\n",
-    "    \"neuropal_file\": \"/store1/prj_jax/Aggregated_Traces_h5/dict_neuropal_label_prj_kfc.h5\", # File containing the neuropal labels\n",
-    "    \"structured_dict\": h5_to_dict(\"/store1/prj_kfc/Structured_Data_Info.h5\")\n",
-    "    }"
+    "# prj_data[\"prj_kfc\"] = {\n",
+    "#     \"processed_h5_directory\": \"/store1/prj_kfc/data/processed_h5\", # Directory containing the processed h5 files\n",
+    "#     \"neuropal_file\": \"/store1/prj_jax/Aggregated_Traces_h5/dict_neuropal_label_prj_kfc.h5\", # File containing the neuropal labels\n",
+    "#     \"structured_dict\": h5_to_dict(\"/store1/prj_kfc/Structured_Data_Info.h5\")\n",
+    "#     }"
    ]
   },
   {
@@ -259,19 +259,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Class: CEPV Turns:  760 (D:  172, V:  588)\n",
-      "Class: IL1V Turns:  632 (D:  132, V:  500)\n",
-      "Class: IL2V Turns:  791 (D:  173, V:  618)\n",
-      "Class: OLQV Turns:  775 (D:  165, V:  610)\n",
-      "Class: RMDV Turns:  743 (D:  166, V:  577)\n",
-      "Class: RMEV Turns:  536 (D:  121, V:  415)\n",
-      "Class: SAAV Turns:  604 (D:  125, V:  479)\n",
+      "Class: CEPV Turns:  380 (D:   62, V:  318)\n",
+      "Class: IL1V Turns:  364 (D:   63, V:  301)\n",
+      "Class: IL2V Turns:  379 (D:   64, V:  315)\n",
+      "Class: OLQV Turns:  375 (D:   58, V:  317)\n",
+      "Class: RMDV Turns:  341 (D:   56, V:  285)\n",
+      "Class: RMEV Turns:  235 (D:   43, V:  192)\n",
+      "Class: SAAV Turns:  340 (D:   54, V:  286)\n",
       "Class: SIAV Turns:  277 (D:   44, V:  233)\n",
-      "Class: SIBV Turns:  263 (D:   42, V:  221)\n",
+      "Class: SIBV Turns:  243 (D:   36, V:  207)\n",
       "Class: SMBV Turns:  302 (D:   51, V:  251)\n",
-      "Class: SMDV Turns:  797 (D:  176, V:  621)\n",
-      "Class: URAV Turns:  439 (D:   95, V:  344)\n",
-      "Class: URYV Turns:  792 (D:  165, V:  627)\n"
+      "Class: SMDV Turns:  393 (D:   64, V:  329)\n",
+      "Class: URAV Turns:  273 (D:   44, V:  229)\n",
+      "Class: URYV Turns:  393 (D:   64, V:  329)\n"
      ]
     }
    ],
